<resources>
    <string name="app_name">Programming Resouces</string>
    <string name="interested_technologies">Interested technologies:</string>
    <string name="android_development">Android Development</string>
    <string name="add">Add</string>
    <string name="jetpack">Jetpack</string>
    <string name="compose">Compose</string>
    <string name="android">Android</string>
    <string name="kotlin">Kotlin</string>
    <string name="developed_by">Developed By Ujjawal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>