<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.ujjawal.programmingresouces.model.User" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgUser"
            imageUrl="@{user.profileImageUrl}"
            placeholder="@{@drawable/man}"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            app:shapeAppearanceOverlay="@style/circleImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/man" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@{user.name}"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgUser"
            app:layout_constraintTop_toTopOf="@id/imgUser"
            tools:text="Ujjawal Dubey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtUserBio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@{user.bio}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgUser"
            app:layout_constraintTop_toBottomOf="@+id/txtUsername"
            tools:text="A developer who loves to code, learn latest thing, daily medium reader. " />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierImgAndBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="imgUser,txtUserBio" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textInterestedTechnologies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/interested_technologies"
            android:textColor="@color/purple_200"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrierImgAndBio" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupInterestedTechnology"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInterestedTechnologies">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android"
                app:closeIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jetpack"
                app:closeIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compose"
                app:closeIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kotlin"
                app:closeIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                app:closeIcon="@drawable/ic_baseline_add_24"
                app:closeIconEnabled="true" />

        </com.google.android.material.chip.ChipGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>